# formidable-grid

./: .envrc  .gitignore  .pre-commit-config.yaml  .pylintrc  .settings.toml  Dockerfile.arras  Dockerfile.frontend  Dockerfile.gridlabd  Dockerfile.python  Dockerfile.ray  Makefile  Makefile.common.mak  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  test.glm
api/: Dockerfile  Dockerfile.py  Dockerfile.ray  api.py  config.py  data_display.py  helpers.py  konfig.py  main.py  profile_reader.py  setup_log.py
api/app/: __init__.py  dss_worker.py  helpers.py  models.py  plotter.py  power_flow.py  power_flow_opendss.py  profile_reader.py  ray_handler.py
api/common/: konfig.py  models.py
api/examples/: run_daily.py  run_dynamics.py
api/experiments/: run_cases.py  run_daily.py  run_qsts.py
api/extract_data/: profile_reader.py  sql_extract.py
api/opendss/: helpers.py  plotter.py  profile_reader.py  run_dynamics.py
api/opendss_worker/: power_flow.py
api/parser/: __init__.py  glm_folders.py  glm_res.py
api/tests/: test_daily_example.py  test_dynamics_example.py  test_qsts_example.py
arras-energy/: Dockerfile
arras-energy/models/: main.glm  main.json
backend-arras/: Dockerfile  main.py
backend-arras-api/: Dockerfile  main.py
backend-arras/data/: simple-grid.glm
backend-arras/tests/: 01-simple_case_test.py
backend-gridlabd/: Dockerfile  main.py
backend-gridlabd/tests/: 01-simple_case_test.py
data/inputs/: node.voltage_A,node.voltage_B,node.voltage_C  processed_pv_profiles.parquet  s.glm  s.json  simple-grid.glm  simple-grid.json
docker/: Dockerfile.grafana  Dockerfile.python  docker-compose.yml
dockerfiles/: docker-compose.yml
docs/: 01-links.urls
docs/studies/: 01-packages.urls
experiments/: 01-sql-extract.ipynb  02-qsts-example1.ipynb  load_generator.py  run_cases.py  run_qsts.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend-glmplotter/: Dockerfile  requirements.txt
frontend-glmplotter/glm-plotter/: GLMparser.py  glm-plotter.py
frontend-gridlabd/: Dockerfile
frontend-gridlabd/glm-plotter/: glm-plotter.py
frontend-gridlabd/src/: config.py  main.py
frontend-webgme/: Dockerfile
frontend/src/: App.css  App.jsx
grafana/: Dockerfile  grafana.ini
grafana/dashboards/: serve_grafana_dashboard.json
gridlabd/: Dockerfile  main.py  requirements.txt
gridlabd/src/: konfig.py  main.py
gridlabd/tests/: 01-simple_case_test.py
mongo-init/: init.js
opendss/: __init__.py  helpers.py  main.py  main_daily.py  main_matplotlib.py  plotter.py  run_daily.py  run_dynamics.py  run_yearly.py
opendss/DSSfiles/: LoadShape.dss  Master.dss  (+8 more)
pydss/: test.ipynb
scripts/: fetch-images.sh  install-docker.sh  run-native-all.sh  run-native.sh  start-dev.sh  start-ray-head.sh
src/: data_display.py  data_extract.py  data_model.py  helpers.py  konfig.py  main.py  setup_log.py
studies/: 01-packages.urls
tests/: test_qsts_example.py  test_qsts_pipeline.py
(+123 files in other folders)
